Add firestore config

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
-    <script src="/src/index.pack.js"></script>
+    <script src="/src/index.js"></script>
   </body>
 </html>
